<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserController.ContactNumberActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_lock"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpw"
            android:textColor="@color/Black"
            android:gravity="center"
            android:textSize="10pt"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotpwtext"
            android:textColor="@color/Black"
            android:gravity="center"/>


        <EditText
            android:id="@+id/txtmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditText"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:inputType="number"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_contact_black"
            android:hint="@string/mobilehint"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/reset"
            android:gravity="center"
            android:onClick="OnResetButtonClick"
            android:theme="@style/MyButton"
            />

    </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>